--- a/app/src/main/res/layout/fragment_documents.xml
+++ b/app/src/main/res/layout/fragment_documents.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?actionBarSize"
         app:title="@string/documents"/>
 
     <androidx.recyclerview.widget.RecyclerView
