--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -15,6 +15,7 @@
         tools:src="@tools:sample/backgrounds/scenic"/>
 
     <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -22,6 +23,7 @@
         style="@style/TextAppearance.MaterialComponents.Headline6"/>
 
     <TextView
+        android:id="@+id/tv_created_at"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="@tools:sample/full_names"
