--- a/app/src/main/res/layout/fragment_document_scan.xml
+++ b/app/src/main/res/layout/fragment_document_scan.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.airatlovesmusic.scanner.ui.scan.DocumentRectangle
+    <com.airatlovesmusic.scanner.ui.scan.DocumentCornersView
         android:id="@+id/hud"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
