--- a/app/src/main/res/layout/fragment_document_scan.xml
+++ b/app/src/main/res/layout/fragment_document_scan.xml
@@ -10,12 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.airatlovesmusic.scanner.ui.scan.DocumentCornersView
-        android:id="@+id/hud"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/transparent"/>
-
     <ImageButton
         android:id="@+id/ib_flash_controller"
         android:layout_width="56dp"
@@ -34,5 +28,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:background="@drawable/bg_circle_capture_image"/>
+
+    <ImageView
+        android:id="@+id/iv_preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <com.airatlovesmusic.scanner.ui.scan.DocumentCornersView
+        android:id="@+id/hud"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"/>
 
 </RelativeLayout>
